# CoMe_context_memory

./: .gitignore  LICENSE  README.md  README_en.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-feature-request.md  03-question.md  config.yml
LSP_check/: .descriptions.xml  GrazieInspection.xml  LossyEncoding.xml  PyBroadExceptionInspection.xml  PyInconsistentReturnsInspection.xml  PyMethodMayBeStaticInspection.xml  PyPackageRequirementsInspection.xml  PyProtectedMemberInspection.xml  PyShadowingNamesInspection.xml  PyUnboundLocalVariableInspection.xml  PyUnresolvedReferencesInspection.xml  PyUnusedImportsInspection.xml  PyUnusedLocalInspection.xml  SpellCheckingInspection.xml
config/: context_memory.yaml  memory.yaml
docs/: README.md  README_en.md  TODO.md  baseline_report_template.md  cli_guide.md  cli_guide_en.md  config_guide.md  config_guide_en.md  introduction_outline.md  jsonrpc_methods.md  jsonrpc_methods_en.md  project_introduction.md  project_introduction_edited.md  project_introduction_en.md  python_api_guide.md  python_api_guide_en.md  query_concurrency_report.json  query_concurrency_report_tiya.json  smoke_baseline_report.json  smoke_baseline_report_tiya.json  v3_decouple_checklist.md
scripts/: cli_smoke.py  rpc_smoke.py
src/come_context_memory/: LLM_connect.py  LLM_usage.py  __init__.py  cli.py  config.py  file_cache.py  logger.py  rpc_server.py  time_id.py  utils.py
src/come_context_memory/memory/: OPTIMIZE_API.md  TIYA_DEPENDENCIES.md  __init__.py  aliasing.py  context_bucket.py  engine.py  llm_pipeline.py  memory_manager.py  models.py  multimodal.py  rerank.py  storage.py  test_aliasing.py
src/come_context_memory/memory/prompts/: bucket_split_schema.md  bucket_split_system.md  bucket_summary_schema.md  bucket_summary_system.md  clean_system.md  compress_schema.md  compress_system.md  image_extract_user.md  ingest_schema.md  ingest_system.md  query_schema.md  query_system.md  split_schema.md  split_system.md  (+4 more)
src/context_memory/: LLM_connect.py  LLM_usage.py  __init__.py  cli.py  config.py  file_cache.py  logger.py  rpc_server.py  utils.py
src/context_memory/memory/: aliasing.py  engine.py  llm_pipeline.py  multimodal.py  storage.py
tests/: query_concurrency_smoke.py  smoke_baseline.py  test_Interactive_jsonrpc.py  test_Interactive_python.py  test_add_dir_subbucket_strict.py  test_decouple.py  test_query_mode_semantics.py  test_real_llm_ci_smoke.py  test_release_smoke_three_interfaces.py  test_root_active_pointer_stability.py
(+20 files in other folders)
