[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "come-context-memory"
version = "0.1.0"
description = "Decoupled ContextMemory V3 runtime"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "CoMe" }
]
license = { text = "Proprietary" }
dependencies = [
  "httpx==0.28.1",
  "tiktoken==0.12.0",
  "PyYAML==6.0.3",
  "pillow==12.0.0",
  "requests==2.32.5",
  "networkx==3.6",
  "python-louvain==0.16",
  "Brotli==1.2.0",
  "zstandard==0.23.0",
  "typing_extensions==4.15.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
come_context_memory = [
  "memory/prompts/*.md",
  "memory/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
