[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context_memory"
version = "0.3.0"
description = "A Memory System Base on Context"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "RicoZ", email = "fiwrst@163.com" }
]
license = { text = "Proprietary" }
keywords = ["llm", "memory", "context", "rag", "knowledge-base"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
  "httpx==0.28.1",
  "tiktoken==0.12.0",
  "PyYAML==6.0.3",
  "pillow==12.0.0",
  "requests==2.32.5",
  "networkx==3.6",
  "python-louvain==0.16",
  "Brotli==1.2.0",
  "zstandard==0.23.0",
  "typing_extensions==4.15.0",
  "fastapi==0.136.1",
  "uvicorn==0.46.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
context-memory-cli = "context_memory.cli:main"
context-memory-rpc = "context_memory.rpc_server:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
context_memory = [
  "memory/prompts/*.md",
  "memory/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
